<resources>

    <string name="app_name">TodoList</string>

    <string name="todo_default_name">"Enter name"</string>
    <string name="todo_default_date">"No date"</string>

    <string name="dialog_title_surprise">"Bonus question"</string>
    <string name="dialog_message_surprise">"If you want, you can add a little something to this todoList application."
        "It can be a new feature, an animation, just some wonderful code, or how to use a library you really like. Be original :)"</string>
    <string name="confirm">"Confirm"</string>
    <string name="description_hint">Todo description</string>
    <string name="type_hint">--Select a type--</string>
    <string name="add_new_type">Add new type</string>
    <string name="new_type">New type</string>
    <string name="type_name_hint">New type name</string>
    <string name="type_color_hint">Choose a color </string>
    <string name="save_new_todo">Add</string>
    <string name="save_todo">Save</string>
    <string name="is_done">Done</string>
    <string name="empty_type">Please Select a type </string>
    <string name="empty_description">Please add a description</string>
    <string name="empty_type_name">Please add the type name </string>
</resources>
